Added all routes, handlebars, and comments

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,8 +16,11 @@
             <form class="control signup-form">
                 <button id="login-btn" type="submit">Login</button>
             </form>
+            <br>
+            <a href="/signup">Don't have an account? Sign up here</a>
         </div>
-        <a href="/signup">Don't have an account? Sign up here</a>
+
 
     </form>
 </div>
+<script src="../js/login.js"></script>
