--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,15 +1,15 @@
 <div class="signup-box">
     <form class="signup-form">Signup
         <div>
-            <label for="firstName">First name</label>
+            <label for="first_name">First name</label>
             <div>
-                <input class="input" type="text" name="firstName" id="firstName" placeholder="firstName Address" />
+                <input class="input" type="text" name="first_name" id="first_name" placeholder="First name" />
             </div>
         </div>
         <div>
-            <label for="lastName">Last name</label>
+            <label for="last_name">Last name</label>
             <div>
-                <input class="input" type="lastName" name="lastName" id="lastName" />
+                <input class="input" type="last_name" name="last_name" id="last_name" placeholder="Last name"/>
             </div>
         </div>
         <div>
@@ -32,3 +32,4 @@
 
     </form>
 </div>
+<script src="../js/signup.js"></script>
