--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 * {
     background-color:antiquewhite;
+    text-decoration: none;
 }
 header{
     text-align: center;
@@ -11,7 +12,7 @@ header{
     transform: rotate(-30deg);
     color: brown;
 }
-navbar {
+navbar, .blog-form{
     display: block;
     background-color: brown;
     padding: 0.5rem;
@@ -46,7 +47,7 @@ navbar a{
 .text {
     padding: 1rem;
 }
-textarea {
+#update-blog {
     border: 3px solid brown;
     margin-top: 1rem;
     width: 100%;
@@ -56,7 +57,7 @@ textarea {
 .page {
     margin: 3rem;
 }
-#comment-btn, #update-btn, #delete-btn, #login-btn, #signup-btn  {
+#comment-btn, #update-btn, #delete-btn, #login-btn, #signup-btn, #post-btn  {
     background-color: brown;
     color: whitesmoke;
     font-size: 3vh;
@@ -82,4 +83,35 @@ textarea {
 input {
     font-size: 2rem;
 }
-
+#newPost{
+    text-align: center;
+}
+#post-btn{
+    margin: 1rem;
+}
+.blog-form{
+    color: whitesmoke;
+    font-size: 3rem;
+    text-align: center;
+}
+#blog-title, #blog-body{
+    border: 3px solid brown;
+    margin-top: 1rem;
+    margin: 3rem;
+    width: 100%;
+    height: 10vh;
+    font-size: 2vh;
+}
+#blog-title{
+    height: 2rem;
+    width: 50%;
+}
+.form button{
+    text-align: center;
+}
+.hide-form{
+    display: none;
+}
+#comment-form{
+    margin: 3rem;
+}
