--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,3 @@
-<div>
-    <div class="blog-box">
-        <div class="header">
-            <div class="title">title example idk what</div>
-            <div class="date">posted my me on dd/mm/yyyy</div>
-        </div>
-        <div class="text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quis similique commodi aliquid voluptatum
-                sint? Non animi ad qui, fugiat sed, corporis nemo laudantium id explicabo architecto mollitia iste
-                magni.</p>
-        </div>
-    </div>
-</div>
+{{#each blogs as |blog|}}
+{{> listOfBlogs}}
+{{/each}}
