--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Blog</title>
 </head>
 
@@ -14,7 +14,7 @@
         <a href="/">Home</a>
         <a href="/dashboard">Dashboard</a>
         {{#if logged_in}}
-        <a href="/logout">Logout</a>
+        <a id="logout" href="/">Logout</a>
         {{ else }}
         <a href="/signup">Sign up</a>
         <a href="/login">Login</a>
@@ -22,5 +22,8 @@
     </navbar>
     {{{ body }}}
 </body>
+{{#if logged_in}}
+<script src="../js/logout.js"></script>
+{{/if}}
 
 </html>
